[package]
name = "telminal"
version = "0.1.0"
authors = ["Joe Jackson <cpmhjoe@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = { version = "0.18", features = ["event-stream"] }
futures = "0.3"
futures-timer = "3.0"
tokio = { version= "0.3", features = ["full"] }
unicode-segmentation = "1.6"
